fix: unwanted scrollbar

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,6 +5,15 @@
 html {
   scroll-behavior: smooth;
 }
+.no-visible-scrollbar {
+  scrollbar-width: none;
+  -ms-overflow-style: none;
+  -webkit-overflow-scrolling: touch;
+}
+
+.no-visible-scrollbar::-webkit-scrollbar {
+  display: none;
+}
 
 @layer base {
   :root {
